--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,30 @@
 [flake8]
-exclude = venv,build,docs
+exclude=venv,build,docs,.tox,migrate,migrations,node_modules
 ignore=E203,W503
 max-line-length=88
+# max-complexity=10
 
-[bdist_wheel]
-universal = 1
+[isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=88
+lines_after_imports=2
+known_django=django
+combine_as_imports=True
+sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+
+[coverage:run]
+branch = True
+include =
+    *workbench*
+omit =
+    *migrations*
+    *test_*
+    *venv*
+    *factories*
+
+[coverage:report]
+skip_covered = True
+show_missing = True
