Nine alias management

--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,10 @@ basepython = python3
 deps =
     black
     flake8
-    isort
+    isort>=5
 changedir = {toxinidir}
 commands =
-    isort --recursive setup.py fh_fablib
+    isort setup.py fh_fablib
     black setup.py fh_fablib
     flake8 .
 skip_install = true
