--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 exclude=venv,build,docs,.tox,migrate,migrations,node_modules
 ignore=E203,W503
 max-line-length=88
-# max-complexity=10
+max-complexity=5
 
 [isort]
 multi_line_output=3
