--- a/fh_fablib/pre-commit-defaults.yaml
+++ b/fh_fablib/pre-commit-defaults.yaml
@@ -11,6 +11,7 @@ repos:
       rev: 4.0.1
       hooks:
           - id: flake8
+            exclude: "migrations/"
     - repo: https://github.com/pre-commit/mirrors-prettier
       rev: v2.4.1
       hooks:
