--- a/fh_fablib/pre-commit-defaults-with-formatting.yaml
+++ b/fh_fablib/pre-commit-defaults-with-formatting.yaml
@@ -27,7 +27,7 @@ repos:
       rev: 4.0.1
       hooks:
           - id: flake8
-            excludes: ["migrations/"]
+            excludes: "migrations/"
     - repo: https://github.com/pre-commit/mirrors-prettier
       rev: v2.4.1
       hooks:
