--- a/fh_fablib/pre-commit-defaults-with-formatting.yaml
+++ b/fh_fablib/pre-commit-defaults-with-formatting.yaml
@@ -1,5 +1,3 @@
-# TODO: doesnt work bc of conflicting black and isort configuration
-
 repos:
     - repo: local
       hooks:
@@ -22,12 +20,17 @@ repos:
       rev: 5.10.1
       hooks:
           - id: isort
-            args: [--profile=black]
+            args:
+                [
+                    --virtual-env=venv,
+                    --profile=black,
+                    --lines-after-imports=2,
+                    --combine-as,
+                ]
     - repo: https://github.com/pycqa/flake8
       rev: 4.0.1
       hooks:
           - id: flake8
-            excludes: "migrations/"
     - repo: https://github.com/pre-commit/mirrors-prettier
       rev: v2.4.1
       hooks:
