--- a/fh_fablib/pre-commit-defaults.yaml
+++ b/fh_fablib/pre-commit-defaults.yaml
@@ -1,35 +1,62 @@
 repos:
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.0.1
+      hooks:
+          - id: check-added-large-files
+          - id: check-merge-conflict
+          - id: end-of-file-fixer
+          - id: trailing-whitespace
     - repo: local
       hooks:
           - id: django-check
             name: django check
-            entry: sh -c 'venv/bin/python manage.py check'
+            entry: sh -c 'stat venv/bin/python && venv/bin/python manage.py check || echo "Skipped"'
             pass_filenames: false
             language: system
             always_run: true
+    - repo: https://github.com/asottile/pyupgrade
+      rev: v2.29.1
+      hooks:
+          - id: pyupgrade
+            args: [--py36-plus]
+    - repo: https://github.com/adamchainz/django-upgrade
+      rev: 1.4.0
+      hooks:
+          - id: django-upgrade
+            args: [--target-version, "3.2"]
+    - repo: https://github.com/psf/black
+      rev: 21.10b0
+      hooks:
+          - id: black
+    - repo: https://github.com/pycqa/isort
+      rev: 5.10.1
+      hooks:
+          - id: isort
+            args: [--profile=black, --lines-after-imports=2, --combine-as]
     - repo: https://github.com/pycqa/flake8
       rev: 4.0.1
       hooks:
           - id: flake8
-            exclude: "migrations/"
+            args: ["--ignore=E203,E501,W503"]
     - repo: https://github.com/pre-commit/mirrors-prettier
       rev: v2.4.1
       hooks:
           - id: prettier
             args: [--list-different, --no-semi]
             files: "###FRONTEND_STATIC_PATTERN###"
-            types_or: [css, javascript]
+            types_or: [css, javascript, scss]
     - repo: https://github.com/pre-commit/mirrors-eslint
-      rev: v8.2.0
+      rev: v8.3.0
       hooks:
           - id: eslint
             files: "###FRONTEND_STATIC_PATTERN###"
             additional_dependencies:
-                - eslint@7.32.0
+                - eslint@8.3.0
                 - eslint-config-prettier@8.3.0
-                - eslint-config-preact@1.1.4
-                - babel-eslint@10.0.1
-    - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v2.3.0
-      hooks:
-          - id: check-added-large-files
+                - eslint-config-react@1.1.4
+                - eslint-plugin-react@^7.26.1
+                - eslint-plugin-react-hooks@^4.2.1-alpha-00ced1e2b-20211102
+                - "@babel/core"
+                - "@babel/eslint-parser"
+                - "@babel/preset-env"
+                - "@babel/preset-react"
