--- a/fh_fablib/pre-commit-defaults.yaml
+++ b/fh_fablib/pre-commit-defaults.yaml
@@ -49,13 +49,12 @@ repos:
       hooks:
           - id: prettier
             args: [--list-different, --no-semi]
-            files: "###FRONTEND_STATIC_PATTERN###"
             types_or: [css, javascript, scss]
     - repo: https://github.com/pre-commit/mirrors-eslint
       rev: v8.3.0
       hooks:
           - id: eslint
-            files: "###FRONTEND_STATIC_PATTERN###"
+            types_or: [css, javascript, scss]
             additional_dependencies:
                 - eslint@8.3.0
                 - eslint-config-prettier@8.3.0
