--- a/fh_fablib/pre-commit-defaults.yaml
+++ b/fh_fablib/pre-commit-defaults.yaml
@@ -54,7 +54,7 @@ repos:
       rev: v8.3.0
       hooks:
           - id: eslint
-            types_or: [css, javascript, scss]
+            types_or: [javascript]
             additional_dependencies:
                 - eslint@8.3.0
                 - eslint-config-prettier@8.3.0
