--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,36 +26,29 @@ repos:
           - id: django-upgrade
             args: [--target-version, "3.2"]
     - repo: https://github.com/psf/black
-      rev: 21.10b0
+      rev: 21.11b1
       hooks:
           - id: black
     - repo: https://github.com/pycqa/isort
       rev: 5.10.1
       hooks:
           - id: isort
-            args:
-                [
-                    --virtual-env=venv,
-                    --profile=black,
-                    --lines-after-imports=2,
-                    --combine-as,
-                ]
+            args: [--profile=black, --lines-after-imports=2, --combine-as]
     - repo: https://github.com/pycqa/flake8
       rev: 4.0.1
       hooks:
           - id: flake8
             args: ["--ignore=E203,E501,W503"]
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v2.4.1
+      rev: v2.5.0
       hooks:
           - id: prettier
             args: [--list-different, --no-semi]
-            types_or: [css, javascript, scss]
+            exclude: "^conf/|.*\\.html$"
     - repo: https://github.com/pre-commit/mirrors-eslint
       rev: v8.3.0
       hooks:
           - id: eslint
-            types_or: [javascript]
             additional_dependencies:
                 - eslint@8.3.0
                 - eslint-config-prettier@8.3.0
