--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -1,25 +1,27 @@
 exclude: ".yarn/|yarn.lock"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.1.0
     hooks:
       - id: check-added-large-files
       - id: check-merge-conflict
       - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: file-contents-sorter
+        files: requirements-to-freeze.txt
   - repo: local
     hooks:
       - id: django-check
         name: django check
-        entry: sh -c 'stat venv/bin/python && venv/bin/python manage.py check || echo "Skipped"'
+        entry: venv/bin/python manage.py check
         pass_filenames: false
         language: system
         always_run: true
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.29.1
+    rev: v2.31.0
     hooks:
       - id: pyupgrade
-        args: [--py36-plus]
+        args: [--py39-plus]
   - repo: https://github.com/adamchainz/django-upgrade
     rev: 1.4.0
     hooks:
@@ -31,7 +33,7 @@ repos:
       - id: isort
         args: [--profile=black, --lines-after-imports=2, --combine-as]
   - repo: https://github.com/psf/black
-    rev: 21.11b1
+    rev: 22.1.0
     hooks:
       - id: black
   - repo: https://github.com/pycqa/flake8
@@ -40,22 +42,27 @@ repos:
       - id: flake8
         args: ["--ignore=E203,E501,W503"]
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.5.0
+    rev: v2.5.1
     hooks:
       - id: prettier
         args: [--list-different, --no-semi]
-        exclude: "^conf/|.*\\.html$"
+        exclude: "^conf/|.*\\.html$|.*\\.json$"
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.3.0
+    rev: v8.10.0
     hooks:
       - id: eslint
+        types_or: [css, scss, javascript]
         additional_dependencies:
-          - eslint@8.3.0
-          - eslint-config-prettier@8.3.0
-          - eslint-config-react@1.1.4
-          - eslint-plugin-react@^7.26.1
-          - eslint-plugin-react-hooks@^4.2.1-alpha-00ced1e2b-20211102
+          - eslint@^8.10.0
+          - eslint-config-prettier@^8.5.0
+          - eslint-config-preact@^1.3.0
+          - eslint-plugin-compat@^4.0.2
+          - eslint-plugin-jest@^26.1.1
+          - eslint-plugin-react@^7.29.3
+          - eslint-plugin-react-hooks@^4.3.0
           - "@babel/core"
           - "@babel/eslint-parser"
           - "@babel/preset-env"
           - "@babel/preset-react"
+          - "@babel/plugin-syntax-decorators"
+          - jest
