Add a missing babel plugin

--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -65,5 +65,6 @@ repos:
           - "@babel/eslint-parser"
           - "@babel/preset-env"
           - "@babel/preset-react"
+          - "@babel/plugin-syntax-class-properties"
           - "@babel/plugin-syntax-decorators"
           - jest
