--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -9,6 +9,8 @@ repos:
       - id: trailing-whitespace
       - id: file-contents-sorter
         files: requirements-to-freeze.txt
+      - id: file-contents-sorter
+        files: .gitignore
   - repo: local
     hooks:
       - id: django-check
