--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -70,4 +70,5 @@ repos:
           - "@babel/preset-react"
           - "@babel/plugin-syntax-class-properties"
           - "@babel/plugin-syntax-decorators"
+          - "@babel/plugin-syntax-jsx"
           - jest
