--- a/setup.cfg
+++ b/setup.cfg
@@ -1,30 +1,32 @@
-[flake8]
-exclude=venv,build,docs,.tox,migrate,migrations,node_modules
-ignore=E203,W503
-max-line-length=88
-max-complexity=10
+[metadata]
+name = fh_fablib
+version = 1.0.20220405
+description = fh-fablib
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+url = https://github.com/feinheit/fh-fablib/
+author = Matthias Kestenholz
+author_email = mk@feinheit.ch
+license = BSD-3-Clause
+license_file = LICENSE
+platforms = OS Independent
+classifiers =
+    License :: OSI Approved :: BSD License
 
-[isort]
-multi_line_output=3
-include_trailing_comma=True
-force_grid_wrap=0
-use_parentheses=True
-line_length=88
-lines_after_imports=2
-known_django=django
-combine_as_imports=True
-sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+[options]
+packages = find:
+install_requires =
+    fabric!=2.7.0
+    speckenv>=1.1
+python_requires = >=3.9
+include_package_data = True
+zip_safe = False
 
-[coverage:run]
-branch = True
-include =
-    *workbench*
-omit =
-    *migrations*
-    *test_*
-    *venv*
-    *factories*
+[options.packages.find]
+exclude =
+    tests
+    tests.*
 
-[coverage:report]
-skip_covered = True
-show_missing = True
+[options.entry_points]
+console_scripts =
+    fl = fabric.main:program.run
