--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -27,6 +27,10 @@ repos:
     hooks:
       - id: django-upgrade
         args: [--target-version, "4.0"]
+  - repo: https://github.com/MarcoGorelli/absolufy-imports
+    rev: v0.3.1
+    hooks:
+      - id: absolufy-imports
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
