--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,23 @@
-exclude: ".yarn/|yarn.lock"
+exclude: "fabfile/|.yarn/|yarn.lock|webapp/static/libs|parts/static/|webapp/static/ckeditor_plugins|lib/modernizr.custom.js|.min.js$|.pack.js|modernizr$"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.3.0
     hooks:
       - id: check-added-large-files
       - id: check-merge-conflict
       - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: file-contents-sorter
+        files: requirements-to-freeze.txt
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.32.1
+    rev: v2.34.0
     hooks:
       - id: pyupgrade
-        args: [--py39-plus]
+        args: [--py38-plus]
+  - repo: https://github.com/MarcoGorelli/absolufy-imports
+    rev: v0.3.1
+    hooks:
+      - id: absolufy-imports
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
@@ -27,7 +33,7 @@ repos:
       - id: flake8
         args: ["--ignore=E203,E501,W503"]
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.6.2
+    rev: v2.7.0
     hooks:
       - id: prettier
         args: [--list-different, --no-semi]
