--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = fh_fablib
-version = 1.0.20220422.1
+version = 1.0.20220615
 description = fh-fablib
 long_description = file: README.rst
 long_description_content_type = text/x-rst
