--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,3 @@
-exclude: "fabfile/|.yarn/|yarn.lock|webapp/static/libs|parts/static/|webapp/static/ckeditor_plugins|lib/modernizr.custom.js|.min.js$|.pack.js|modernizr$"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
@@ -24,7 +23,7 @@ repos:
       - id: isort
         args: [--profile=black, --lines-after-imports=2, --combine-as]
   - repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 22.6.0
     hooks:
       - id: black
   - repo: https://github.com/pycqa/flake8
@@ -33,8 +32,8 @@ repos:
       - id: flake8
         args: ["--ignore=E203,E501,W503"]
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.0
+    rev: v2.7.1
     hooks:
       - id: prettier
         args: [--list-different, --no-semi]
-        exclude: "^conf/|.*\\.html$|.*\\.json$"
+        exclude: "^conf/|.*\\.html$"
