--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -37,7 +37,7 @@ repos:
       - id: isort
         args: [--profile=black, --lines-after-imports=2, --combine-as]
   - repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 22.6.0
     hooks:
       - id: black
   - repo: https://github.com/pycqa/flake8
@@ -46,14 +46,14 @@ repos:
       - id: flake8
         args: ["--ignore=E203,E501,W503"]
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.17.0
+    rev: v8.19.0
     hooks:
       - id: eslint
         args: [--fix]
         types_or: [css, scss, javascript]
         verbose: true
         additional_dependencies:
-          - eslint@^8.17.0
+          - eslint@^8.19.0
           - eslint-config-prettier
           - eslint-config-preact
           - eslint-plugin-compat
@@ -69,8 +69,8 @@ repos:
           - "@babel/plugin-syntax-jsx"
           - jest
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.0
+    rev: v2.7.1
     hooks:
       - id: prettier
         args: [--list-different, --no-semi]
-        exclude: "^conf/|.*\\.html$|.*\\.json$"
+        exclude: "^conf/|.*\\.html$"
