--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -45,6 +45,8 @@ repos:
     hooks:
       - id: flake8
         args: ["--ignore=E203,E501,W503"]
+        additional_dependencies:
+          - flake8-bugbear
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.22.0
     hooks:
