--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -44,7 +44,7 @@ repos:
     rev: 5.0.4
     hooks:
       - id: flake8
-        args: ["--ignore=E203,E501,W503"]
+        args: ["--ignore=E203,E501,W503", "--max-complexity=10"]
         additional_dependencies:
           - flake8-bugbear
   - repo: https://github.com/pre-commit/mirrors-eslint
