Pin fabric to <2.7 for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    fabric!=2.7.0
+    fabric<2.7
     speckenv>=3.3
 python_requires = >=3.9
 include_package_data = True
