--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
-        args: ["--ignore=E203,E501,W503"]
+        args: ["--ignore=E203,E501,W503,B028"]
         additional_dependencies:
           - flake8-bugbear
   - repo: https://github.com/pre-commit/mirrors-prettier
