--- a/fh_fablib/dotfiles/pyproject.toml
+++ b/fh_fablib/dotfiles/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.ruff]
-extend-select = ["B", "E", "F", "W", "C90", "I", "N", "UP", "FBT", "C4", "DJ", "PIE", "INT", "SIM", "YTT", "G"]
+extend-select = ["B", "E", "F", "W", "C90", "I", "N", "UP", "FBT", "C4", "DJ", "PIE", "INT", "SIM", "YTT", "G", "RUF100"]
 extend-ignore = ["E501"]
 fix = true
 target-version = "py310"
@@ -10,6 +10,9 @@ lines-after-imports = 2
 
 [tool.ruff.mccabe]
 max-complexity = 10
+
+[tool.ruff.per-file-ignores]
+"*/migrat*/*" = ["N806"]
 
 [tool.coverage.run]
 branch = true
