Ignore invalid module names when it's a migration

--- a/fh_fablib/dotfiles/pyproject.toml
+++ b/fh_fablib/dotfiles/pyproject.toml
@@ -12,7 +12,7 @@ lines-after-imports = 2
 max-complexity = 10
 
 [tool.ruff.per-file-ignores]
-"*/migrat*/*" = ["N806"]
+"*/migrat*/*" = ["N806", "N999"]
 
 [tool.coverage.run]
 branch = true
