--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -7,8 +7,11 @@ repos:
       - id: check-builtin-literals
       - id: check-executables-have-shebangs
       - id: check-merge-conflict
+      - id: check-toml
+      - id: check-yaml
       - id: detect-private-key
       - id: end-of-file-fixer
+      - id: mixed-line-ending
       - id: trailing-whitespace
       - id: file-contents-sorter
         files: requirements-to-freeze.txt
@@ -65,4 +68,12 @@ repos:
     hooks:
       - id: prettier
         args: [--list-different, --no-semi]
-        exclude: "^conf/|.*\\.html$"
+        exclude: "^conf/|.*\\.html$|.*\\.json$"
+  - repo: https://github.com/tox-dev/pyproject-fmt
+    rev: 0.11.2
+    hooks:
+      - id: pyproject-fmt
+  - repo: https://github.com/abravalheri/validate-pyproject
+    rev: v0.12.2
+    hooks:
+      - id: validate-pyproject
