--- a/fh_fablib/dotfiles/pyproject.toml
+++ b/fh_fablib/dotfiles/pyproject.toml
@@ -29,7 +29,7 @@ extend-select = [
   # pygrep-hooks
   "PGH",
   # pylint
-  "PLE", "PLW",
+  "PLC", "PLE", "PLW",
   # unused noqa
   "RUF100",
 ]
