--- a/fh_fablib/dotfiles/pyproject.toml
+++ b/fh_fablib/dotfiles/pyproject.toml
@@ -20,6 +20,8 @@ extend-select = [
   "C4",
   # flake8-django
   "DJ",
+  # flake8-implicit-string-concatenation
+  "ISC",
   # flake8-pie
   "PIE",
   # flake8-simplify
