--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
       - id: file-contents-sorter
+        args: [--ignore-case, --unique]
         files: requirements-to-freeze.txt
   - repo: local
     hooks:
