--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 exclude: ".yarn/|yarn.lock"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.6.0
     hooks:
       - id: check-added-large-files
       - id: check-builtin-literals
@@ -25,50 +25,32 @@ repos:
         language: system
         always_run: true
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: 1.15.0
+    rev: 1.17.0
     hooks:
       - id: django-upgrade
         args: [--target-version, "4.0"]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.3.3"
+    rev: "v0.4.4"
     hooks:
       - id: ruff
       - id: ruff-format
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.56.0
-    hooks:
-      - id: eslint
-        args: [--fix]
-        types_or: [css, scss, javascript]
-        verbose: true
-        additional_dependencies:
-          - eslint
-          - eslint-config-prettier
-          - eslint-config-preact
-          - eslint-plugin-compat
-          - eslint-plugin-jest
-          - eslint-plugin-react
-          - eslint-plugin-react-hooks
-          - "@babel/core"
-          - "@babel/eslint-parser"
-          - "@babel/preset-env"
-          - "@babel/preset-react"
-          - "@babel/plugin-syntax-class-properties"
-          - "@babel/plugin-syntax-decorators"
-          - "@babel/plugin-syntax-jsx"
-          - jest
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
     hooks:
       - id: prettier
         args: [--list-different, --no-semi]
-        types_or: [css, scss, javascript]
+        types_or: [css, scss]
         exclude: "^conf/|.*\\.html$|.*\\.json$"
   - repo: https://github.com/tox-dev/pyproject-fmt
-    rev: 1.6.0
+    rev: 2.1.1
     hooks:
       - id: pyproject-fmt
   - repo: https://github.com/abravalheri/validate-pyproject
-    rev: v0.15
+    rev: v0.17
     hooks:
       - id: validate-pyproject
+  - repo: https://github.com/biomejs/pre-commit
+    rev: "v0.1.0"
+    hooks:
+      - id: biome-check
+        additional_dependencies: ["@biomejs/biome@1.7.3"]
