--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,11 @@ Homepage = "https://github.com/feinheit/fh-fablib/"
 path = "fh_fablib/__init__.py"
 
 [tool.ruff]
+fix = true
+show-fixes = true
+target-version = "py39"
+
+[tool.ruff.lint]
 extend-select = [
   # pyflakes, pycodestyle
   "F", "E", "W",
@@ -72,18 +77,15 @@ extend-ignore = [
   # Fabric/invoke do not support keyword-only arguments unfortunately
   "FBT002",
 ]
-fix = true
-show-fixes = true
-target-version = "py39"
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 combine-as-imports = true
 lines-after-imports = 2
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 15
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "*/migrat*/*" = [
   # Allow using PascalCase model names in migrations
   "N806",
