--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: ".yarn/|yarn.lock"
+exclude: ".yarn/|yarn.lock|package.json"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
@@ -25,12 +25,12 @@ repos:
         language: system
         always_run: true
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: 1.17.0
+    rev: 1.18.0
     hooks:
       - id: django-upgrade
         args: [--target-version, "4.0"]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.4.5"
+    rev: "v0.4.7"
     hooks:
       - id: ruff
       - id: ruff-format
@@ -50,7 +50,7 @@ repos:
     hooks:
       - id: validate-pyproject
   - repo: https://github.com/biomejs/pre-commit
-    rev: "v0.1.0"
+    rev: "v0.2.0"
     hooks:
       - id: biome-check
-        additional_dependencies: ["@biomejs/biome@1.7.3"]
+        additional_dependencies: ["@biomejs/biome@1.8.0"]
