--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -24,23 +24,21 @@ repos:
         pass_filenames: false
         language: system
         always_run: true
+      - id: prettier
+        name: prettier
+        entry: npx prettier@3.3.1 --no-semi --write
+        language: system
+        types_or: [css, scss]
   - repo: https://github.com/adamchainz/django-upgrade
     rev: 1.18.0
     hooks:
       - id: django-upgrade
         args: [--target-version, "4.0"]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.4.7"
+    rev: "v0.4.8"
     hooks:
       - id: ruff
       - id: ruff-format
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
-    hooks:
-      - id: prettier
-        args: [--list-different, --no-semi]
-        types_or: [css, scss]
-        exclude: "^conf/|.*\\.html$|.*\\.json$"
   - repo: https://github.com/tox-dev/pyproject-fmt
     rev: 2.1.3
     hooks:
