--- a/fh_fablib/dotfiles/biome.json
+++ b/fh_fablib/dotfiles/biome.json
@@ -10,14 +10,7 @@
   },
   "linter": {
     "enabled": true,
-    "rules": {
-      "complexity": {
-        "noForEach": "off"
-      },
-      "suspicious": {
-        "noArrayIndexKey": "off"
-      }
-    }
+    "rules": {}
   },
   "javascript": {
     "formatter": {
