--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
         entry: npx prettier@3.3.1 --no-semi --write
         language: system
         types_or: [css, scss]
+        require_serial: true
   - repo: https://github.com/adamchainz/django-upgrade
     rev: 1.18.0
     hooks:
