--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -26,22 +26,22 @@ repos:
         always_run: true
       - id: prettier
         name: prettier
-        entry: npx prettier@3.3.1 --no-semi --write
+        entry: npx prettier@3.3.2 --no-semi --write
         language: system
         types_or: [css, scss]
         require_serial: true
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: 1.18.0
+    rev: 1.19.0
     hooks:
       - id: django-upgrade
         args: [--target-version, "4.0"]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.4.8"
+    rev: "v0.5.1"
     hooks:
       - id: ruff
       - id: ruff-format
   - repo: https://github.com/tox-dev/pyproject-fmt
-    rev: 2.1.3
+    rev: 2.1.4
     hooks:
       - id: pyproject-fmt
   - repo: https://github.com/abravalheri/validate-pyproject
@@ -49,7 +49,9 @@ repos:
     hooks:
       - id: validate-pyproject
   - repo: https://github.com/biomejs/pre-commit
-    rev: "v0.2.0"
+    rev: "v0.4.0"
     hooks:
       - id: biome-check
-        additional_dependencies: ["@biomejs/biome@1.8.0"]
+        additional_dependencies: ["@biomejs/biome@1.8.2"]
+        args: [--unsafe]
+        types_or: [javascript, json]
