--- a/fh_fablib/dotfiles/biome.json
+++ b/fh_fablib/dotfiles/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
   "organizeImports": {
     "enabled": false
   },
@@ -10,7 +10,11 @@
   },
   "linter": {
     "enabled": true,
-    "rules": {}
+    "rules": {
+      "suspicious": {
+        "noAssignInExpressions": "off"
+      }
+    }
   },
   "javascript": {
     "formatter": {
