--- a/fh_fablib/dotfiles/biome.json
+++ b/fh_fablib/dotfiles/biome.json
@@ -1,12 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-  "organizeImports": {
-    "enabled": false
-  },
+  "$schema": "https://biomejs.dev/schemas/1.9.0/schema.json",
   "formatter": {
     "enabled": true,
-    "indentStyle": "space",
-    "indentWidth": 2
+    "useEditorconfig": true
   },
   "linter": {
     "enabled": true,
@@ -15,8 +11,13 @@
       "a11y": {
         "noSvgWithoutTitle": "off"
       },
+      "complexity": {
+        "noUselessStringConcat": "error",
+        "noUselessUndefinedInitialization": "error"
+      },
       "correctness": {
         "noUndeclaredVariables": "error",
+        "noUnusedFunctionParameters": "error",
         "noUnusedImports": "error",
         "noUnusedVariables": "error",
         "useArrayLiterals": "error",
@@ -27,26 +28,21 @@
       },
       "style": {
         "noParameterAssign": "off",
+        "useConsistentBuiltinInstantiation": "error",
         "useForOf": "warn"
       },
       "suspicious": {
         "noArrayIndexKey": "warn",
-        "noAssignInExpressions": "off"
+        "noAssignInExpressions": "off",
+        "useErrorMessage": "error"
       }
     }
   },
   "javascript": {
     "formatter": {
       "semicolons": "asNeeded"
-    }
-  },
-  "css": {
-    "formatter": {
-      "enabled": true
     },
-    "linter": {
-      "enabled": true
-    }
+    "globals": []
   },
   "json": {
     "formatter": {
