--- a/fh_fablib/dotfiles/.pre-commit-config.yaml
+++ b/fh_fablib/dotfiles/.pre-commit-config.yaml
@@ -34,9 +34,14 @@ repos:
     rev: 1.21.0
     hooks:
       - id: django-upgrade
-        args: [--target-version, "5.0"]
+        args: [--target-version, "5.1"]
+  -   repo: https://github.com/adamchainz/djade-pre-commit
+      rev: "1.0.0"
+      hooks:
+      -   id: djade
+          args: [--target-version, "5.1"]
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.6.6"
+    rev: "v0.6.8"
     hooks:
       - id: ruff
         args: [--unsafe-fixes]
@@ -46,7 +51,7 @@ repos:
     hooks:
       - id: pyproject-fmt
   - repo: https://github.com/abravalheri/validate-pyproject
-    rev: v0.19
+    rev: v0.20.2
     hooks:
       - id: validate-pyproject
   - repo: https://github.com/biomejs/pre-commit
