ignore files in dist folders

--- a/fh_fablib/dotfiles/biome.json
+++ b/fh_fablib/dotfiles/biome.json
@@ -1,5 +1,8 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
+  "files": {
+    "includes": ["!**/dist/**"]
+  },
   "formatter": {
     "enabled": true,
     "useEditorconfig": true
