--- a/fh_fablib/dotfiles/biome.json
+++ b/fh_fablib/dotfiles/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
   "formatter": {
     "enabled": true,
     "useEditorconfig": true
@@ -12,6 +12,7 @@
         "noSvgWithoutTitle": "off"
       },
       "complexity": {
+        "noImportantStyles": "off",
         "noUselessStringConcat": "error",
         "noUselessUndefinedInitialization": "error",
         "useNumericLiterals": "error",
